gateway/simple-nginx/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    version: "1.19.6"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: "1.19.6"
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.6-alpine
        ports:
        - containerPort: 80
        - containerPort: 443        
        volumeMounts:
        - name: content-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: content-vol
        configMap:
          name: site-content-configmap
