gateway/simple-nginx/nginx-gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.istio-testbed.org.hk"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virt-svc
spec:
  hosts:
  - nginx.istio-testbed.org.hk
  gateways:
  - "istio-system/nginx-gateway"
  http:
  - route:
    - destination:
        host: nginx-service
        port:
          number: 8080
